--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "qs": "^6.11.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
