--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.22",
+    "js-md5": "^0.7.3",
+    "nprogress": "^0.2.0",
     "qs": "^6.11.0",
+    "vant": "^4.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
